fixed whitespace on tablet view

--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,15 @@
   font-family: 'Open Sans', sans-serif;
   min-height: 100vh;
   background: #303030;
+  display: flex;
+  flex-direction: column;
+}
+.App > * {
+  flex-grow: 1;
+}
+.App nav {
+  flex-grow: 0;
+}
+.App footer {
+  flex-grow: 0;
 }
